<resources>
    <string name="app_name">FYP</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="order_list">Order List</string>
    <string name="notification">Notification</string>

    <!--    login & signup-->
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="email_address_colon">Email Address:</string>
    <string name="profile">Profile</string>
    <string name="online_food_ordering">Online Food Ordering</string>
    <string name="login"><u>Login</u></string>
    <string name="loginA">Login</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="registration"><u>Registration</u></string>
    <string name="let_s_get_started">Let\'s get started !</string>
    <string name="create_a_new_account_now">Create a new account now.</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_colon">Phone Number:</string>
    <string name="phone_helperText">Enter your phone number here</string>
    <string name="firstN_helperText">Enter your first name here</string>
    <string name="last_name">Last Name</string>
    <string name="lastN_helperText">Enter your last name here</string>
    <string name="first_name">First Name</string>
    <string name="email_helperText">Enter your email here.</string>
    <string name="password_helperText">Create your password here.</string>
    <string name="logo">logo</string>
    <string name="taruc_logo">Taruc logo</string>
    <string name="already_have_an_account">Already have an account?</string>


    <!--    canteen-->
    <string name="title_canteen">Title Canteen</string>
    <string name="food_image">food image</string>

    <!--    cart-->
    <string name="text_view">TextView</string>
    <string name="rm_price">RM: Price</string>
    <string name="plus_button">Plus Button</string>
    <string name="number">1</string>
    <string name="food_name">Food Name</string>
    <string name="food_name_underline"><u>Food Name</u></string>

    <!--    Reset & Forgot Pwd-->
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="check_out">Check Out</string>
    <string name="new_password">New Password</string>
    <string name="new_password_colon">New Password:</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_colon">Confirm Password:</string>
    <string name="confirmpwd_helper_text">Enter your confirm password here.</string>
    <string name="confirm">Confirm</string>

    <!-- reset successful content-->
    <string name="reset_password"><u>Reset Password</u></string>
    <string name="textview">TextView</string>
    <string name="your_email_account_is">Your email account is </string>
    <string name="dear">Dear </string>
    <string name="password_reset_successfully">Password Reset Successfully!</string>
    <string name="sucess_content">Welcome to <b>TARUC Online Food Ordering App</b>. Click the below link and login to our system to place an order. Enjoy for your lunch time^^</string>
    <string name="booking_time">Booking Time:</string>
    <string name="cancel">Cancel</string>
    <string name="canteen_name_nou">Canteen Name</string>
    <string name="canteen_name"><u>Canteen Name</u></string>
    <string name="profile_image">profile image</string>
    <string name="noodle">Noodle</string>
    <string name="rice">Rice</string>
    <string name="spicy">Spicy</string>
    <string name="soup">Soup</string>
    <string name="vegetarian">Vegetarian</string>
    <string name="beverage">Beverage</string>
    <string name="content_description_media">content_description_media</string>
    <string name="rm_xxx">RM xxx</string>
    <string name="xx_review">(xx review)</string>
    <string name="price">Price:</string>
    <string name="large">(Large)</string>
    <string name="small">(Small)</string>
    <string name="store_name">store name</string>
    <string name="cancelled">Cancelled</string>
    <string name="paid">Paid</string>
    <string name="_15_mar_2020">15 Mar, 2020</string>
    <string name="current_order">Current Order</string>
    <string name="order_history">Order History</string>
    <string name="select_option">Select \nOption</string>
    <string name="take_away">TAKE AWAY</string>
    <string name="dine_in">DINE-IN</string>
    <string name="full_name">Full Name:</string>
    <string name="personal_information">Personal Information</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="dinning_option">Dinning Option:</string>
    <string name="pick_up_time">Pick up Time:</string>
    <string name="confirmation">Confirmation</string>
    <string name="sucess">Sucess</string>
    <string name="date">date</string>
    <string name="rated_foods">Rated Foods</string>
    <string name="lim_yi_en">LIM YI EN</string>
    <string name="log_out">Log Out</string>
    <string name="minus_button">Minus Button</string>
    <string name="available_stock">Available Stock:</string>
    <string name="large_nobracket">Large</string>
    <string name="small_nobracket">Small</string>
    <string name="remarks">Remarks:</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="go_to_shop_now">Go to Shop Now</string>
    <string name="there_is_empty_items_yet">There are currently no item in cart.</string>
    <string name="date_colon">Date:</string>
    <string name="canteen_name_colon">Canteen Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="unit_price">Unit Price:</string>
    <string name="progress">Progress:</string>
    <string name="store_name_colon">Store Name:</string>
    <string name="total_payment">Total Payment:</string>
    <string name="view_food_details">View Food Details</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password:</string>
    <string name="old_password_n">Old Password</string>

    <string name="error_pick_time">Please select the time within the operating hours (8:00 AM to 20:00 PM).</string>
    <string name="error_empty_time">Please select your pick up time.</string>

</resources>
