<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="0dp"
    app:cardElevation="3dp"
    android:background="@color/colorAccent">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/txtExpandable_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="15dp"
            android:text="@string/personal_information"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            />

        <RelativeLayout
            android:id="@+id/expandable_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="40dp"
            android:visibility="visible">

            <TextView
                android:id="@+id/full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_name"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold"
                android:padding="16dp"/>

            <ImageButton
                android:id="@+id/btnCart"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:tint="@color/blue"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/ic_edit"
                android:layout_alignParentEnd="true"/>

            <TextView
                android:id="@+id/txtFull_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LIM YI EN"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_below="@+id/full_name"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address_colon"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_below="@+id/txtFull_name"/>

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_address"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_below="@+id/email"/>

            <TextView
                android:id="@+id/phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number_colon"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_below="@+id/txtEmail"/>

            <TextView
                android:id="@+id/txtPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="@dimen/sub_title"
                android:textStyle="bold"
                android:padding="16dp"
                android:layout_below="@+id/phone"/>

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>