<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="false">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/login_background"
            tools:context=".stuMaintenanceModule.SignUpFragment">

                <TextView
                    android:id="@+id/txtDescTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/let_s_get_started"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txtDesc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:text="@string/create_a_new_account_now"
                    android:textSize="14sp"
                    android:textStyle="italic"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtDescTitle" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:background="@drawable/text_field_border"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txtDesc">

                <TextView
                    android:id="@+id/txtResgistration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/registration"
                    android:textSize="@dimen/title_text_size"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="135dp"
                    android:contentDescription="@string/logo"
                    android:src="@drawable/logo3"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toTopOf="@+id/constraintLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtFirstNLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:hint="@string/first_name"
                    app:endIconMode="clear_text"
                    android:theme="@style/MyEditTextTheme"
                    app:helperText="@string/firstN_helperText"
                    app:layout_constraintBottom_toTopOf="@+id/txtPhoneLayout"
                    app:layout_constraintEnd_toStartOf="@+id/txtLastNLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtResgistration">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtFirstN"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtLastNLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="155dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/last_name"
                    app:endIconMode="clear_text"
                    android:theme="@style/MyEditTextTheme"
                    app:helperText="@string/lastN_helperText"
                    app:layout_constraintBottom_toTopOf="@+id/txtPhoneLayout"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toEndOf="@+id/txtFirstNLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtResgistration">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtLastN"
                        android:layout_width="155dp"
                        android:layout_height="wrap_content"
                        android:inputType="textCapCharacters"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPhoneLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/signUp_field_length"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/phone_number"
                    android:theme="@style/MyEditTextTheme"
                    app:endIconMode="clear_text"
                    app:helperText="@string/phone_helperText"
                    app:layout_constraintBottom_toTopOf="@+id/txtEmailLayout"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtLastNLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPhone"
                        android:layout_width="@dimen/signUp_field_length"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtEmailLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/signUp_field_length"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/email_address"
                    android:theme="@style/MyEditTextTheme"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="clear_text"
                    app:helperText="@string/email_helperText"
                    app:layout_constraintBottom_toTopOf="@+id/txtPasswordLayout"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtPhoneLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtEmail"
                        android:layout_width="@dimen/signUp_field_length"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtEmailLayout" />

                <TextView
                    android:id="@+id/txtPasswordTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/password_helperText1"
                    android:textAlignment="center"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/line1" />

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="16dp"
                    android:background="@color/lightGray"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordTitle" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtPasswordLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="@dimen/signUp_field_length"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="72dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/password"
                    android:theme="@style/MyEditTextTheme"
                    app:boxBackgroundMode="outline"
                    app:endIconMode="password_toggle"
                    app:helperText="@string/password_helperText"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtEmailLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtPassword"
                        android:layout_width="@dimen/signUp_field_length"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:scrollHorizontally="true"
                        android:singleLine="true" />

                </com.google.android.material.textfield.TextInputLayout>


                <TextView
                    android:id="@+id/textView"
                    android:layout_width="170dp"
                    android:layout_height="22dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/already_have_an_account"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintTop_toBottomOf="@+id/txtPasswordLayout" />

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/login"
                    android:textColor="@color/colorAccent12"
                    app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <Button
                    android:id="@+id/containedBtnSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="@string/sign_up"
                    app:layout_constraintBottom_toBottomOf="@+id/constraintLayout"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>